2006-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp (sqrtm): Removed unnecessary to_cmat()
	conversion

	* tests/matfunc_test.ref: Updated improper reference file

2006-01-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/*.cpp, tests/transforms_test.ref: Fixed incorrect
	preprocessor checks for defined external libraries. One reference
	file updated. (merged from itpp-3-9-branch)
	
	* itpp/base/transform.cpp: Fixed improper error messages (merged
	from itpp-3-9-branch)

	* configure.ac: Fixed a minor bug, which prevented disabling CBLAS
	support using `--without-cblas' configure switch (merged from
	itpp-3-9-branch)

2006-01-11  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/transforms.{h,cpp}: Added zero-padding for fft_real()
	  and ifft_real(). Also made all size input variables const.

	* itpp/base/poly.{h,cpp}: Added polyval() for vec and cvec input
	  combinations.

2006-01-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h,
	tests/matfunc_test.cpp, tests/matfunc_test.ref: Added sqrtm()
	function that calculates the matrix square root for real and
	complex matrices. Based on Octave implementation.

	* itpp/base/stat.cpp, itpp/base/stat.h: Added frob_norm()
	functions that calculate Frobenius norm of matrices

	* itpp/base/machdep.h: Reverted back recent changes due to
	compilation problems under MSVC++ .NET (merged from itpp-3-9-branch)

2006-01-10  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* itpp/base/machdep.h: Was changed in an undocumented way. I had
	to change back one line ("#elif defined(__i386__) .....") to make
	it compile in MSVC++.

2006-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h: Cosmetic changes -
	removed unnecessary definition and updated author's list (merged
	from itpp-3-9-branch)

2006-01-09  Adam Piatyszek  <ediap@users.sourceforge.net>
